# spain-rec

./: .env.example  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
data/generator/: generate.py
docker/: docker-compose.yml
scripts/: verify_connections.py
src/agents/: orchestrator.py  run.py  state.py
src/api/: main.py
src/db/: models.py  schema.py
src/db/migrations/: env.py
src/db/migrations/versions/: 8b8a2fee80c2_initial_schema.py
src/pipeline/: ingest.py
