[project]
name = "spain-rec"
version = "0.1.0"
description = "Agentic AI tourism recommendation system for Spain"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    # CrewAI (separate venv, listed here for reference)
    # "crewai>=0.80.0",
    # Vector stores
    "qdrant-client>=1.9.0",
    "pinecone-client>=3.0.0",
    # Graph DB
    "neo4j>=5.20.0",
    "langchain-neo4j>=0.1.0",
    # Relational DB
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Streaming
    "kafka-python>=2.0.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    # Data & validation
    "pydantic>=2.7.0",
    "faker>=25.0.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    "einops>=0.8.0",
    # Observability
    "langsmith>=0.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
